<resources>
    <string name="app_name">MisContactos</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="telefono">Telefono</string>
    <string name="e_mail">E-mail</string>
    <string name="descripcion_contacto">Descripción Contacto</string>
    <string name="siguiente">siguiente</string>
    <string name="email">juanmrosas@gmail.com</string>
    <string name="phone">+50 4543 040404</string>
    <string name="name">Juan Rosas</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="fecha_nac">30/09/2020</string>
    <string name="txt_descripcion">Conocido en la Hackaton de Cordoba del año pasado</string>
    <string name="editar_datos">editar datos</string>
    <string name="un_mensaje_descriptivo">un mensaje descriptivo</string>
    <string name="sin_datos">Sin datos</string>
    <string name="pNombre">Nombre</string>
    <string name="pFecha">Fecha</string>
    <string name="pTelefono">Telefono</string>
    <string name="pEmail">Email</string>
    <string name="pDescripcion">Descripcion</string>
    <string name="enviado_desde">Enviado desde la app Mis Contactos</string>
    <string name="descripcion_usuario">Imagen del usuario</string>
    <string name="lista_de_contactos">lista de contactos</string>
    <string name="pushunico">Notificar Especifico</string>
    <string name="pushbroad">Notificar a todos</string>
</resources>