<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvContacto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/actvity_vertical_margin"
    card_view:cardCornerRadius="@dimen/corner_radius_cardview">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:srcCompat="@tools:sample/avatars"
            android:contentDescription="@string/descripcion_usuario" />

        <TextView
            android:id="@+id/tvNombreCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pNombre"
            android:textSize="@dimen/nombre_cardview"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvTelefonoCV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pTelefono" />
    </LinearLayout>
</androidx.cardview.widget.CardView>