<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/myback"
    tools:context=".DetalleContactos">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ll_nacim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <ImageView
            android:id="@+id/iv_nacim"
            android:layout_width="@dimen/my_size_icon"
            android:layout_height="@dimen/my_size_icon"
            android:contentDescription="@string/un_mensaje_descriptivo"
            app:srcCompat="@android:drawable/ic_menu_my_calendar" />

        <TextView
            android:id="@+id/tc_nacim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fecha_nac"
            android:textSize="@dimen/txt_ediciondatos" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_nacim">

        <ImageView
            android:id="@+id/iv_phone"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/un_mensaje_descriptivo"
            app:srcCompat="@android:drawable/stat_sys_phone_call" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"

            android:textSize="@dimen/txt_ediciondatos" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_phone">

        <ImageView
            android:id="@+id/iv_email"
            android:layout_width="40dp"
            android:layout_height="40dp"

            android:contentDescription="@string/un_mensaje_descriptivo"
            app:srcCompat="@android:drawable/ic_dialog_email" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/email"
            android:textSize="@dimen/txt_ediciondatos" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/ll_email">

        <ImageView
            android:id="@+id/iv_desc"
            android:layout_width="@dimen/my_size_icon"
            android:layout_height="@dimen/my_size_icon"
            android:contentDescription="@string/un_mensaje_descriptivo"
            app:srcCompat="@android:drawable/sym_action_chat" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txt_descripcion"
            android:textSize="@dimen/txt_ediciondatos" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/myback"
        android:onClick="edicion_onClick"
        android:text="@string/editar_datos"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_desc" />
</androidx.constraintlayout.widget.ConstraintLayout>